--- a/.github/workflows/main_waather123.yml
+++ b/.github/workflows/main_waather123.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: dotnet publish
+      - name: Publish with dotnet
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
